# duckdb-adbc-client

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  DESIGN.md  Makefile  README.md  extension_config.cmake  vendor_adbc.sh
.github/workflows/: ExtensionTemplate.yml  MainDistributionPipeline.yml
docs/: 404.html  CNAME
src/: .adbc_insert.cpp.swp  adbc_catalog.cpp  adbc_clear_cache.cpp  adbc_connection_pool.cpp  adbc_driver_manager.cpp  adbc_execute.cpp  adbc_extension.cpp  adbc_insert.cpp  adbc_scan.cpp  adbc_schema.cpp  adbc_schema_entry.cpp  adbc_storage.cpp  adbc_table_entry.cpp  adbc_transaction.cpp  current_arch.h  driver_manager.cpp  duckdb_adbc_client_extension.cpp
src/adbc-vendor/: .clang-tidy  adbc_driver_manager.cpp  adbc_driver_manager_api.cpp  adbc_driver_manager_driver_loading.cpp  adbc_driver_manager_profiles.cpp  adbc_nanoarrow.cpp  adbc_utils.cpp  current_arch.h  nanoarrow.cpp
src/include/: adbc_catalog.hpp  adbc_clear_cache.hpp  adbc_connection_pool.hpp  adbc_execute.hpp  adbc_extension.hpp  adbc_insert.hpp  adbc_raii.hpp  adbc_scan.hpp  adbc_schema_entry.hpp  adbc_storage.hpp  adbc_table_entry.hpp  adbc_transaction.hpp  adbc_util.hpp  duckdb_adbc_client_extension.hpp
src/include/adbc-vendor/: .clang-tidy  adbc.h  adbc.hpp  adbc_driver_manager.h  adbc_driver_manager.hpp  adbc_driver_manager_internal.h  adbc_nanoarrow.h  adbc_utils.h  utils.h
src/include/arrow-adbc/: adbc.h  adbc_driver_manager.h
src/include/toml++/: toml.hpp
test/: datafusion.toml  empty.toml  penguins.db  penguins.sqlite  penguins.toml
test/sql/: adbc.test  duckdb_adbc_client.test  read_adbc.test  select.test
test/sql/datafusion/: attach_read.test  attach_write.test
test/sql/sqlite/: adbc_execute.test  attach_read.test  attach_write.test  read_adbc.test
